--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -7,6 +7,10 @@ security:
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
         users_in_memory: { memory: null }
+        proveedor:
+            entity:
+                class: App\Entity\User
+                property: email
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
@@ -14,6 +18,15 @@ security:
         main:
             lazy: true
             provider: users_in_memory
+            form_login:
+                login_path: login
+                check_path: login
+                default_target_path: tasks
+                provider: proveedor
+            logout:
+                path: /logout
+                target: /login
+            stateless: false
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
