--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,5 +3,12 @@ tasks:
   controller: App\Controller\TaskController::index
 
 register:
-  path: /users/register
+  path: /register
   controller: App\Controller\UserController::register
+
+login:
+  path: /login
+  controller: App\Controller\UserController::login
+
+logout:
+  path: /logout
